--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,19 +5,60 @@
 }
 
 :root {
-  --primary-dark: #222330;
-  --primary-light: #ff6162;
+  --primary-dark-color: #222330;
+  --primary-light-color: #ff6162;
+  --primary-font-color: #d2d3d9;
+  --secondary-font-color: #616170;
+  --title-font: 'Share Tech Mono', monospace;
+  --script-font: 'Share Tech Mono', monospace;
 }
 
 .header {
   box-sizing: border-box;
-  background-color: var(--primary-dark);
-  height: 100px;
+  background-color: var(--primary-dark-color);
+  height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 0 100px;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: var(--title-font);
+  color: var(--primary-light-color);
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  list-style-type: none;
+  gap: 20px;
+  color: var(--primary-light-color);
+  font-size: 20px;
+  font-weight: bold;
+
+}
+
+.nav ul a {
+  text-decoration: none;
+  color: var(--primary-font-color);  
+}
+
+.nav ul a:hover {
+  text-shadow: 2px 2px 5px var(--primary-light-color); 
+}
+
+.hero {
+  display: flex;
+  justify-content: center;
+  background-color: var(--secondary-font-color); 
 }
 
 .hero-video {
-  width: 100%;
+  height: 90vh;
 }
