--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,10 +17,14 @@
   box-sizing: border-box;
   background-color: var(--primary-dark-color);
   height: 10vh;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0 100px;
+  z-index: 12;
+  position: fixed;
+  box-shadow: 0 4px 6px 0 var(--secondary-font-color);
 }
 
 .nav {
@@ -60,5 +64,66 @@
 }
 
 .hero-video {
-  height: 90vh;
+  height: 100vh;
+}
+
+/* Pages */
+.directions-grid {
+  box-sizing: border-box;
+  display: grid;
+  height: 70vh;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 160px;
+  padding: 160px;
+}
+
+.directions-grid div {
+  background-color: var(--primary-dark-color);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 15px 50px;
+}
+
+.directions-grid p {
+  color: var(--secondary-font-color);
+  font-family: var(--script-font);
+}
+
+.react-icons {
+  font-size: 50px;
+  color: var(--primary-light-color);
+}
+
+.technology-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-dark-color);
+  height: 70vh;
+  padding: 0 100px;
+}
+
+/* .technology-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: var(--primary-dark-color);
+  height: 70vh;
+  padding: 0 100px;
+} */
+
+.technology-flex img {
+  height: 300px;
+}
+
+.tech-def {
+  display: flex;
+  justify-content: center;
+  color: var(--primary-font-color);
+  font-family: var(--script-font);
+  width: 40%;
+  padding-left: 40px;
+  text-align: left;
 }
