--- a/client/src/index.css
+++ b/client/src/index.css
@@ -127,3 +127,129 @@
   padding-left: 40px;
   text-align: left;
 }
+/* footer------------------------ */
+.footerContainer {
+  display: flex;
+  background: var(--primary-dark-color);
+  justify-content: space-evenly;
+  flex-direction: row;
+  padding: 2em;
+  font-family:var(--title-font);
+}
+.img {
+  /* display: flex; */
+  width: 50px;
+  align-items: center;
+}
+.txtImgContainer {
+  display: flex;
+  align-items: center;
+}
+.link {
+  display: flex;
+  align-items: flex-end;
+  color: var(--primary-font-color);
+  text-decoration: none;
+ 
+}
+.footerLinkText {
+  margin: 1.5em;
+  color: var(--primary-font-color);
+  font-family:var(--title-font);
+  margin-left: "1.5em";
+  margin-right: "1.5em";
+  margin-bottom: "1.5em";
+}
+.footerPContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  /* margin-left: 1.5em;
+  margin-right: 1.5em; */
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: var(--primary-dark-color);
+}
+.connectIconsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.icons {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.h1Connect {
+  display: flex;
+  color: var(--primary-font-color);
+  justify-content: center;
+  margin-bottom: 1em;
+  padding-top: 2em;
+}
+
+/* signup--------------------------- */
+.background {
+  background: var(--primary-dark-color);
+  height: 100vh;
+  position: relative;
+  top: 10vh
+}
+
+.input {
+  display: flex;
+  padding: 14px 32px 14px 16px;
+  border-radius: 4px;
+  outline: none;
+  width: 400px;
+  font-family: serif;
+  margin-bottom: 20px;
+  font-size: 1.25em;
+  color: black;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  
+  color: var(--primary-font-color);
+  align-items: center;
+  font-family:var(--title-font);
+  margin-top: 2em;
+}
+.button {
+  border: none;
+  padding: 5px 10px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  /* text-decoration: none; */
+  font-size: 1.5em;
+  font-family:var(--title-font);
+  width: 400px;
+  background: var(--primary-light-color);
+  color: white;
+  position: absolute;
+}
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+}
+.label {
+  font-weight: bold;
+  font-family: serif;
+  font-size: 1.5em;
+  padding-right: 10px;
+}
+.h1 {
+  display: flex;
+  color: var(--primary-font-color);
+  justify-content: center;
+  padding-top: 2em;
+  
+}
+/* login ----------------------------------------*/
+
+.errorText {
+  color: rgb(228, 46, 1);
+  font-family:var(--title-font);
+}
