--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,10 @@
   box-shadow: 0 4px 6px 0 var(--secondary-font-color);
 }
 
+.logo img {
+  height: 10vh;
+}
+
 .nav {
   display: flex;
   flex-direction: column;
@@ -64,7 +68,8 @@
 }
 
 .hero-video {
-  height: 100vh;
+  /* height: 100vh; */
+  width: 100%;
 }
 
 /* Pages */
