--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,8 @@
   justify-content: space-between;
   padding: 0 100px;
   z-index: 12;
-  position: fixed;
+  position: sticky;
+  top: 0;
   box-shadow: 0 4px 6px 0 var(--secondary-font-color);
 }
 
@@ -233,7 +234,6 @@
   width: 400px;
   background: var(--primary-light-color);
   color: white;
-  position: absolute;
 }
 .buttonContainer {
   display: flex;
@@ -257,4 +257,86 @@
 .errorText {
   color: rgb(228, 46, 1);
   font-family:var(--title-font);
+}
+
+/* FirstUpload Page ----------------------------- */
+.profile-body {
+  height: 80vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.upload-container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 1300px;
+  height: 60vh;
+  box-shadow: 0 0 10px var(--secondary-font-color);
+}
+
+.container-header {
+  box-sizing: border-box;
+  box-shadow: 0 1px 1px 0 var(--secondary-font-color);
+  width: 100%;
+}
+
+.container-header h1 {
+    padding: 20px;
+    font-family: var(--title-font);
+    margin: 0;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.drop-box-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.reference-detail-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .dotted-line {
+  box-sizing: border-box;
+  border: 3px dashed var(--secondary-font-color);
+  width: 80%;
+  height: 425px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f0f0;
+  font-family: var(--script-font);
+} */
+
+.reference-form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.first-last-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 20px;
 }
