--- a/client/src/index.css
+++ b/client/src/index.css
@@ -197,7 +197,7 @@
   background: var(--primary-dark-color);
   height: 100vh;
   position: relative;
-  top: 10vh;
+  /* top: 10vh; */
 }
 
 .input {
@@ -232,6 +232,7 @@
   width: 400px;
   background: var(--primary-light-color);
   color: white;
+  /* position:absolute; */
 }
 .buttonContainer {
   display: flex;
