Updated thirdcompare page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,8 +14,6 @@
 
 7. ThirdCompare Page
 
-8. Profile
-
 Table of Contents  */
 
 
@@ -24,460 +22,440 @@ Table of Contents  */
    1. Global Styles
    =============== */
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-:root {
-  --primary-dark-color: #222330;
-  --primary-light-color: #ff6162;
-  --primary-font-color: #d2d3d9;
-  --secondary-font-color: #616170;
-  --title-font: "Share Tech Mono", monospace;
-  --script-font: "Share Tech Mono", monospace;
-}
-
-.header {
-  box-sizing: border-box;
-  background-color: var(--primary-dark-color);
-  height: 10vh;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 0 100px;
-  z-index: 12;
-  position: sticky;
-  top: 0;
-  box-shadow: 0 4px 6px 0 var(--secondary-font-color);
-}
-
-.logo img {
-  height: 10vh;
-}
-
-.nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-family: var(--title-font);
-  color: var(--primary-light-color);
-}
-
-.nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-  list-style-type: none;
-  gap: 20px;
-  color: var(--primary-light-color);
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.nav ul a {
-  text-decoration: none;
-  color: var(--primary-font-color);
-}
-
-.nav ul a:hover {
-  text-shadow: 2px 2px 5px var(--primary-light-color);
-}
-
-.hero {
-  display: flex;
-  justify-content: center;
-  background-color: var(--secondary-font-color);
-}
-
-.hero-video {
-  height: 100vh;
-  width: 100%;
-}
-
-/* ==================
-   2. Pages
-   =============== */
-
-.directions-grid {
-  box-sizing: border-box;
-  display: grid;
-  height: 70vh;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 160px;
-  padding: 160px;
-}
-
-.directions-grid div {
-  background-color: var(--primary-dark-color);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 15px 50px;
-}
-
-.directions-grid p {
-  color: var(--secondary-font-color);
-  font-family: var(--script-font);
-}
-
-.react-icons {
-  font-size: 50px;
-  color: var(--primary-light-color);
-}
-
-.technology-flex {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--primary-dark-color);
-  height: 70vh;
-  padding: 0 100px;
-}
-
-/* .technology-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-color: var(--primary-dark-color);
-  height: 70vh;
-  padding: 0 100px;
-} */
-
-.technology-flex img {
-  height: 300px;
-}
-
-.tech-def {
-  display: flex;
-  justify-content: center;
-  color: var(--primary-font-color);
-  font-family: var(--script-font);
-  width: 40%;
-  padding-left: 40px;
-  text-align: left;
-}
-
-/* ==================
-   3. Footer
-   =============== */
-
-.footerContainer {
-  display: flex;
-  background: var(--primary-dark-color);
-  justify-content: space-evenly;
-  flex-direction: row;
-  padding: 2em;
-  font-family: var(--title-font);
-}
-.img {
-  /* display: flex; */
-  width: 50px;
-  align-items: center;
-}
-.txtImgContainer {
-  display: flex;
-  align-items: center;
-}
-.link {
-  display: flex;
-  align-items: flex-end;
-  color: var(--primary-font-color);
-  text-decoration: none;
-}
-.footerLinkText {
-  margin: 1.5em;
-  color: var(--primary-font-color);
-  font-family: var(--title-font);
-  margin-left: "1.5em";
-  margin-right: "1.5em";
-  margin-bottom: "1.5em";
-}
-.footerPContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  /* margin-left: 1.5em;
-  margin-right: 1.5em; */
-  flex-wrap: wrap;
-  justify-content: center;
-  background-color: var(--primary-dark-color);
-}
-.connectIconsContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.icons {
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-}
-.h1Connect {
-  display: flex;
-  color: var(--primary-font-color);
-  justify-content: center;
-  margin-bottom: 1em;
-  padding-top: 2em;
+   * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
   
-}
-
-/* ==================
-   4. Sign-up
-   =============== */
-
-.background {
-  background: var(--primary-dark-color);
-  height: 100vh;
-  position: relative;
-  /* top: 10vh; */
-}
-
-.input {
-  display: flex;
-  padding: 14px 32px 14px 16px;
-  border-radius: 4px;
-  outline: none;
-  width: 400px;
-  font-family: serif;
-  margin-bottom: 20px;
-  font-size: 1.25em;
-  color: black;
-}
-.form {
-  display: flex;
-  flex-direction: column;
-
-  color: var(--primary-font-color);
-  align-items: center;
-  font-family: var(--title-font);
-  margin-top: 2em;
-}
-.button {
-  border: none;
-  padding: 5px 10px;
-  margin: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  /* text-decoration: none; */
-  font-size: 1.5em;
-  font-family: var(--title-font);
-  width: 350px;
-  background: var(--primary-light-color);
-  color: white;
-  /* position:absolute; */
-}
-.buttonContainer {
-  display: flex;
-  justify-content: center;
-}
-.label {
-  font-weight: bold;
-  font-family: var(--title-font);
-  font-size: 1.5em;
-  padding-right: 10px;
-}
-.h1 {
-  display: flex;
-  color: var(--primary-font-color);
-  justify-content: center;
-  padding-top: 2em;
-  font-family: var(--title-font);
-}
-
-/* ==================
-   5. Login
-   =============== */
-
-.errorText {
-  color: rgb(228, 46, 1);
-  font-family: var(--title-font);
-}
-
-/* ==================
-   6. FirstUpload Page
-   =============== */
-
-.profile-body {
-  height: 80vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.upload-container {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  max-width: 1300px;
-  height: 60vh;
-  box-shadow: 0 0 10px var(--secondary-font-color);
-}
-
-.container-header {
-  box-sizing: border-box;
-  box-shadow: 0 1px 1px 0 var(--secondary-font-color);
-  width: 100%;
-}
-
-.container-header h1 {
-  padding: 20px;
-  font-family: var(--title-font);
-  margin: 0;
-}
-
-.form-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-}
-
-.drop-box-container {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.reference-detail-container {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-/* .dotted-line {
-  box-sizing: border-box;
-  border: 3px dashed var(--secondary-font-color);
-  width: 80%;
-  height: 425px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #f7f0f0;
-  font-family: var(--script-font);
-} */
-
-.reference-form {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.first-last-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  gap: 20px;
-}
-
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-/* ==================
-   7. ThirdCompare Page
-   =============== */
-
-.compare-container {
-  box-sizing: border-box;
-  width: 70%;
-  display: flex;
-  flex-direction: row;
-  padding: 30px;
-  gap: 5px
-}
-
-.reference-frame {
-  width: 30%;
-  height: 100%;
-}
-
-.reference-frame img {
-  width: 100%;
-  height: auto;
-  box-shadow: -12px -12px 2px 1px  var(--primary-light-color);
-}
-
-.search-frame {
-  width: 70%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  position: relative;
-}
-
-.search-frame img {
-  height: 100%;
-  width: auto;
-  box-shadow: 12px 12px 2px 1px  var(--primary-light-color);
-}
-
-.results-container {
-  width: 30%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-}
-
-.accuracy-container h2 {
-  font-size: 3.5em;
-  font-weight: bold;
-  font-family: var(--title-font);
-}
-
-.pass-failed p {
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-size: 1.5em;
-  font-family: var(--title-font);
-  background-color: red;
-}
-
-
-
-/* ==================
-   8. Profile Page
-   =============== */
-.border{
-  border: var(--primary-light-color) solid 3px;
-  background-color: white;
-  margin-bottom: 5em;
-  margin-top: 5em;
-  text-align: center;
-  padding: 2em;
-  width: 400px;
-  box-shadow: white 20px, 20px;
+  :root {
+    --primary-dark-color: #222330;
+    --primary-light-color: #ff6162;
+    --primary-font-color: #d2d3d9;
+    --secondary-font-color: #616170;
+    --title-font: "Share Tech Mono", monospace;
+    --script-font: "Share Tech Mono", monospace;
+  }
   
-}
-.dataContainer{
-  display: flex;
-flex-wrap: wrap;
-  flex-direction: row;
-  /* background-color: white; */
-  justify-content: space-evenly;
-  font-family: var(--title-font);
- 
-}
-.profBG{
-  background-color: var(--primary-dark-color);
-  height: auto
-}
+  .header {
+    box-sizing: border-box;
+    background-color: var(--primary-dark-color);
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 100px;
+    z-index: 12;
+    position: sticky;
+    top: 0;
+    box-shadow: 0 4px 6px 0 var(--secondary-font-color);
+  }
+  
+  .logo img {
+    height: 10vh;
+  }
+  
+  .nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: var(--title-font);
+    color: var(--primary-light-color);
+  }
+  
+  .nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    list-style-type: none;
+    gap: 20px;
+    color: var(--primary-light-color);
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .nav ul a {
+    text-decoration: none;
+    color: var(--primary-font-color);
+  }
+  
+  .nav ul a:hover {
+    text-shadow: 2px 2px 5px var(--primary-light-color);
+  }
+  
+  .hero {
+    display: flex;
+    justify-content: center;
+    background-color: var(--secondary-font-color);
+  }
+  
+  .hero-video {
+    height: 100vh;
+    width: 100%;
+  }
+  
+  /* ==================
+     2. Pages
+     =============== */
+  
+  .directions-grid {
+    box-sizing: border-box;
+    display: grid;
+    height: 70vh;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 160px;
+    padding: 160px;
+  }
+  
+  .directions-grid div {
+    background-color: var(--primary-dark-color);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px 50px;
+  }
+  
+  .directions-grid p {
+    color: var(--secondary-font-color);
+    font-family: var(--script-font);
+  }
+  
+  .react-icons {
+    font-size: 50px;
+    color: var(--primary-light-color);
+  }
+  
+  .technology-flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-dark-color);
+    height: 70vh;
+    padding: 0 100px;
+  }
+  
+  /* .technology-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: var(--primary-dark-color);
+    height: 70vh;
+    padding: 0 100px;
+  } */
+  
+  .technology-flex img {
+    height: 300px;
+  }
+  
+  .tech-def {
+    display: flex;
+    justify-content: center;
+    color: var(--primary-font-color);
+    font-family: var(--script-font);
+    width: 40%;
+    padding-left: 40px;
+    text-align: left;
+  }
+  
+  /* ==================
+     3. Footer
+     =============== */
+  
+  .footerContainer {
+    display: flex;
+    background: var(--primary-dark-color);
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 2em;
+    font-family: var(--title-font);
+  }
+  .img {
+    /* display: flex; */
+    width: 50px;
+    align-items: center;
+  }
+  .txtImgContainer {
+    display: flex;
+    align-items: center;
+  }
+  .link {
+    display: flex;
+    align-items: flex-end;
+    color: var(--primary-font-color);
+    text-decoration: none;
+  }
+  .footerLinkText {
+    margin: 1.5em;
+    color: var(--primary-font-color);
+    font-family: var(--title-font);
+    margin-left: "1.5em";
+    margin-right: "1.5em";
+    margin-bottom: "1.5em";
+  }
+  .footerPContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    /* margin-left: 1.5em;
+    margin-right: 1.5em; */
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: var(--primary-dark-color);
+  }
+  .connectIconsContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .icons {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+  }
+  .h1Connect {
+    display: flex;
+    color: var(--primary-font-color);
+    justify-content: center;
+    margin-bottom: 1em;
+    padding-top: 2em;
+  }
+  
+  /* ==================
+     4. Sign-up
+     =============== */
+  
+  .background {
+    background: var(--primary-dark-color);
+    height: 100vh;
+    position: relative;
+    /* top: 10vh; */
+  }
+  
+  .input {
+    display: flex;
+    padding: 14px 32px 14px 16px;
+    border-radius: 4px;
+    outline: none;
+    width: 400px;
+    font-family: serif;
+    margin-bottom: 20px;
+    font-size: 1.25em;
+    color: black;
+  }
+  .form {
+    display: flex;
+    flex-direction: column;
+  
+    color: var(--primary-font-color);
+    align-items: center;
+    font-family: var(--title-font);
+    margin-top: 2em;
+  }
+  .button {
+    border: none;
+    padding: 5px 10px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    /* text-decoration: none; */
+    font-size: 1.5em;
+    font-family: var(--title-font);
+    width: 350px;
+    background: var(--primary-light-color);
+    color: white;
+    /* position:absolute; */
+  }
+  .buttonContainer {
+    display: flex;
+    justify-content: center;
+  }
+  .label {
+    font-weight: bold;
+    font-family: serif;
+    font-size: 1.5em;
+    padding-right: 10px;
+  }
+  .h1 {
+    display: flex;
+    color: var(--primary-font-color);
+    justify-content: center;
+    padding-top: 2em;
+  }
+  
+  /* ==================
+     5. Login
+     =============== */
+  
+  .errorText {
+    color: rgb(228, 46, 1);
+    font-family: var(--title-font);
+  }
+  
+  /* ==================
+     6. FirstUpload Page
+     =============== */
+  
+  .profile-body {
+    /* height: 80vh; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  .upload-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    max-width: 1300px;
+    /* height: 60vh; */
+    box-shadow: 0 0 10px var(--secondary-font-color);
+  }
+  
+  .container-header {
+    box-sizing: border-box;
+    box-shadow: 0 1px 1px 0 var(--secondary-font-color);
+    width: 100%;
+  }
+  
+  .container-header h1 {
+    padding: 20px;
+    font-family: var(--title-font);
+    margin: 0;
+  }
+  
+  .form-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+  }
+  
+  .drop-box-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .reference-detail-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* .dotted-line {
+    box-sizing: border-box;
+    border: 3px dashed var(--secondary-font-color);
+    width: 80%;
+    height: 425px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f0f0;
+    font-family: var(--script-font);
+  } */
+  
+  .reference-form {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  
+  .first-last-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 20px;
+  }
+  
+  canvas {
+    position: absolute;
+  }
+  
+  /* ==================
+     7. ThirdCompare Page
+     =============== */
+  
+  .compare-container {
+    box-sizing: border-box;
+    width: 70%;
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    gap: 5px
+  }
+  
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    max-width: 1300px;
+    box-shadow: 0 0 10px var(--secondary-font-color);
+  }
+  
+  .reference-frame {
+    width: 30%;
+    height: 100%;
+  }
+  
+  .reference-frame img {
+    width: 100%;
+    height: auto;
+    box-shadow: -12px -12px 2px 1px  var(--primary-light-color);
+  }
+  
+  .search-frame {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+  }
+  
+  .search-frame img {
+    width: 100%;
+    height: auto;
+    box-shadow: 12px 12px 2px 1px  var(--primary-light-color);
+  }
+  
+  .results-container {
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+  
+  .accuracy-container h2 {
+    font-size: 3.5em;
+    font-weight: bold;
+    font-family: var(--title-font);
+  }
+  
+  .pass-failed p {
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 1.5em;
+    font-family: var(--title-font);
+    background-color: green;
+  }
+  
+  
