--- a/client/src/index.css
+++ b/client/src/index.css
@@ -457,5 +457,31 @@ Table of Contents  */
     font-family: var(--title-font);
     background-color: green;
   }
+  /* ==================
+   8. Profile Page
+   =============== */
+.border{
+  border: var(--primary-light-color) solid 3px;
+  background-color: white;
+  margin-bottom: 5em;
+  margin-top: 5em;
+  text-align: center;
+  padding: 2em;
+  width: 400px;
+  box-shadow: white 20px, 20px;
+ 
   
+}
+.dataContainer{
+  display: flex;
+flex-wrap: wrap;
+  flex-direction: row;
+  /* background-color: white; */
+  justify-content: space-evenly;
+  font-family: var(--title-font);
+}
+.profBG{
+  background-color: var(--primary-dark-color);
+  height: auto
+}
   
